<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/roundstyle"
        android:backgroundTint="@color/babyBlue"
        android:orientation="vertical">

        <TextView
            android:id="@+id/RateFacilityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/rate_facility_title"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:numStars="5"
            android:theme="@style/RatingBar" />

        <TextView
            android:id="@+id/commentFacilityTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/comment_facility_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundstyle2"
            android:backgroundTint="@color/UBCBlue"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/comment_hint"
            android:inputType="textMultiLine"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:textColor="@color/white"
            android:textColorHint="#FFFFF0"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="7dp"
                android:backgroundTint="@color/white"
                android:text="@string/cancel"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="7dp"
                android:backgroundTint="@color/UBCBlue"
                android:text="@string/submit" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>